# antscihub-SIEVE

./: .gitignore  AGENTS.md  README.md  pyproject.toml  sieve_gui.py
docs/: next_steps.md
docs/decisions/: .index.md  001-reusable-benchmarks-are-product-diagnostics.md  002-headless-scientific-identity-is-not-gui-lifecycle.md  003-compute-resources-are-a-first-class-product-capability.md
docs/handoffs/: .isolate-state-divergence.md  2-Media-service-handoff-review.md  4-Working-grid-review.md  4-Working-grid.md  5-First-channel-review.md  5-First-channel.md  6-Normalization.md  7-Change-energy.md  sieve-replicates-feature-handoff.md
docs/ideas/: processing-ideas.md  ui-ideas.md
findings/: .index.md  2026-07-23-media-viewer-performance.md
findings/data/: after-interactions-offscreen.json  after-preview-viewer-source-native.json  after-preview-viewer-source-offscreen.json  after-service-fixture.json  after-service-source-display.json  after-service-source-native.json  after-viewer-source-native.json  after-viewer-source-offscreen.json  baseline-service-fixture.json  baseline-service-source.json  baseline-viewer-source-native.json  baseline-viewer-source-offscreen.json  current-interactions-offscreen.json
scripts/: create_media_benchmark_fixture.py  inspect_working_window.py
src/antscihub_sieve/: __init__.py  errors.py
src/antscihub_sieve/application/: active_asset.py  assets.py  (+7 more)
tests/: conftest.py  test_cli_and_gui.py  test_domain_and_services.py  test_intensity.py  test_intensity_gui.py  test_isolate_player.py  test_working_grid.py  test_working_window.py
(+27 files in other folders)
