[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "antscihub-sieve"
version = "0.1.0.dev0"
description = "Signal Isolation for Ethological Video Events"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ant Science Hub"}]

[project.scripts]
sieve = "antscihub_sieve.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"antscihub_sieve.schemas" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
